Added some feature definitions
Signed-off-by: Martin van Wingerden <martinvw@mtin.nl>

--- a/org.openhab.ui.cometvisu.php/pom.xml
+++ b/org.openhab.ui.cometvisu.php/pom.xml
@@ -15,8 +15,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.caucho</groupId>
-      <artifactId>quercus</artifactId>
+      <groupId>org.openhab</groupId>
+      <artifactId>com.caucho.quercus</artifactId>
       <version>4.0.45</version>
     </dependency>
     <dependency>
