--- a/org.openhab.ui.cometvisu.php/pom.xml
+++ b/org.openhab.ui.cometvisu.php/pom.xml
@@ -30,8 +30,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.openhab.core.bundles</groupId>
-      <artifactId>org.openhab.core.ui.dashboard</artifactId>
+      <groupId>org.openhab.ui</groupId>
+      <artifactId>org.openhab.ui.dashboard</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
