--- a/org.openhab.ui.habpanel/pom.xml
+++ b/org.openhab.ui.habpanel/pom.xml
@@ -23,8 +23,8 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.openhab.core.bundles</groupId>
-      <artifactId>org.openhab.core.ui.dashboard</artifactId>
+      <groupId>org.openhab.ui</groupId>
+      <artifactId>org.openhab.ui.dashboard</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
